<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/left_drawer"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="@android:color/white"
    android:clickable="true"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="160dp" />

        <com.daimajia.slider.library.Indicators.PagerIndicator
            android:id="@+id/custom_indicator"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/default_user_logo"
                app:civ_border_color="#ffffff"
                app:civ_border_width="0dp" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical|left"
                android:text=""
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical|left"
                android:text=""
                android:textColor="#ffffff"
                android:textSize="12sp" />

        </LinearLayout>

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tag_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/select_title"
                android:textColor="@color/my_blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tag_title_expense"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/select_expense"
                android:textColor="@color/my_blue"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/left_expense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="$19999"
                android:textColor="@color/red"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="~"
                android:textColor="@color/my_blue"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/right_expense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="$99999"
                android:textColor="@color/red"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <TextView
                    android:id="@+id/select_expense"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_select_condition"
                    android:gravity="center"
                    android:text="@string/set_select"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/no_expense"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_select_condition"
                    android:gravity="center"
                    android:text="@string/any"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/tag_title_time"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/select_time"
                android:textColor="@color/my_blue"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/left_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Dec. 23 2015"
                android:textColor="@color/red"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="~"
                android:textColor="@color/my_blue"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/right_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Dec. 23 2015"
                android:textColor="@color/red"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <TextView
                    android:id="@+id/select_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_select_condition"
                    android:gravity="center"
                    android:text="@string/set_select"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/no_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_select_condition"
                    android:gravity="center"
                    android:text="@string/any"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/tag_title_tag"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/select_tag"
                android:textColor="@color/my_blue"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/tag_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/fruit_icon" />

            <TextView
                android:id="@+id/tag_name"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="fruit"
                android:textColor="@color/my_blue"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <TextView
                    android:id="@+id/select_tag"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_select_condition"
                    android:gravity="center"
                    android:text="@string/set_select"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/no_tag"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_select_condition"
                    android:gravity="center"
                    android:text="@string/any"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/select"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_no_condition"
                android:gravity="center"
                android:text="@string/select"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>